# TPM

./: .gitignore  README.md  alembic.ini  get_report.sh  pyproject.toml
docs/: architecture-inventory-report.md  architecture-report.md  architecture-runtime-report.md  implementation-report-track4.md  principles.md  runtime-v1-audit-report.md  vision.md
docs/adr/: ADR-001-mcca-to-tpm.md.md
docs/mvp/: mvp-v0.1.md
src/tpm/cli/: main.py
src/tpm/contracts/agents/: agent_schema.json
src/tpm/contracts/mcp/: mcp_schema.json
src/tpm/contracts/skills/: skill_schema.json
src/tpm/contracts/transformers/: transformer_schema.json
src/tpm/gateway/: app.py
src/tpm/models/: spec.py
src/tpm/observability/ai_metrics/: models.py
src/tpm/observability/logs/: structured.py
src/tpm/observability/metrics/: interfaces.py
src/tpm/observability/traces/: interfaces.py
src/tpm/persistence/: database.py  models.py  repository.py  uow.py
src/tpm/plugins/lifecycle/: interfaces.py
src/tpm/plugins/loader/: core.py
src/tpm/plugins/manifests/: model.py
src/tpm/registry/: base.py
src/tpm/registry/agents/: registry.py
src/tpm/registry/mcps/: engineering.py  registry.py
src/tpm/registry/skills/: registry.py
src/tpm/registry/transformers/: registry.py
src/tpm/runtime/: interfaces.py
src/tpm/specs/: loader.py
src/tpm/validators/: engine.py
tests/: test_cli.py  test_fastapi.py  test_identity.py  test_mcp.py  test_observability.py  test_persistence.py  test_plugins.py  test_runtime.py  test_security_runtime.py  test_specs.py  test_versioning.py  test_workflows.py
(+25 files in other folders)
