[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tpm"
version = "0.1.0"
description = "Trusted Cognitive Platform (TPM)"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.7.0",
]

[project.scripts]
tpm = "tpm.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tpm"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
